# upnp-honeypot

./: .gitignore  README.md  makefile
soapserver/: Cargo.toml
soapserver/src/: main.rs
soapserver/src/endpoint/: mod.rs
soapserver/src/soap/: mod.rs
ssdpserver/: Cargo.toml
ssdpserver/src/: .gitignore  main.rs
ssdpserver/src/ip/: mod.rs
ssdpserver/src/ssdp/: mod.rs
