[package]
name = "soapserver"
version = "0.1.0"
authors = ["Michael Hardy <98.michael.hardy@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
chrono = {version = "0.4", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
elastic-index = {git = "https://github.com/michardy/elastic-index.git"}
