[package]
name = "soapserver"
version = "0.1.0"
authors = ["Michael Hardy <98.michael.hardy@gmail.com>"]

[dependencies]
actix-web = "0.7"
http = "0.1"
chrono = {version = "0.4", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
elastic-index = {git = "https://github.com/michardy/elastic-index.git"}
quick-xml = "0.13"
yaml-rust = "0.4"
