[package]
name = "ssdpserver"
version = "0.1.0"
authors = ["Michael Hardy <98.michael.hardy@gmail.com>"]

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
redis = "0.9"
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13"
elastic-index = {git = "https://github.com/michardy/elastic-index.git"}
